# rustuml

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  NOTICES  README.md  STABILITY.md  bullseye.yaml
crates/rustuml-oracle/: Cargo.toml
crates/rustuml-oracle/examples/: check_all.rs  class_diff_signatures.rs  diff_one.rs  golden_gen.rs  render_with_oracle.rs  sequence_diff_signatures.rs  usecase_diff_signatures.rs
crates/rustuml-oracle/src/: compare.rs  extract.rs  generator.rs  lib.rs  runner.rs
crates/rustuml-oracle/src/matrix/: activity.rs  class.rs  component.rs  deployment.rs  features.rs  mod.rs  sequence.rs  state.rs  usecase.rs  validate.rs
crates/rustuml-oracle/tests/: golden.rs  golden_formats.rs  golden_matrix.rs  golden_pairs.rs  matrix_oracle.rs  oracle.rs  preproc_golden.rs  preproc_oracle.rs  preproc_parse.rs  proptest_oracle.rs
crates/rustuml-render/: Cargo.toml
crates/rustuml-render/src/: activity.rs  archimate.rs  ascii.rs  ascii_activity.rs  ascii_class.rs  ascii_state.rs  board.rs  class.rs  component.rs  creole.rs  deployment.rs  ditaa.rs  dot_diagram.rs  ebnf.rs  eps.rs  filter_registry.rs  font_metrics.rs  gantt.rs  git_diagram.rs  java_awt_metrics.txt  json_diagram.rs  layout_oracle.rs  lib.rs  math.rs  metrics.rs  mindmap.rs  nwdiag.rs  object.rs  openiconic.rs  pdf.rs  plantuml_metrics.rs  png.rs  regex_diagram.rs  salt.rs  sequence.rs  skinparam.rs  sprite.rs  state.rs  style.rs  svg.rs  (+4 more)
docs/: TODO.md  audit-log.md  convergence-report.md  plantuml_svg_spec.md  targets.md
scripts/: generate-golden-matrix.sh  generate-golden.sh  plantuml-server.sh  viewer.py
test-diagrams/: golden.tar.zst  golden_failures.txt  wide-shallow-dense.puml
tools/: MonoMetricsExtract.java  (+1 more)
(+12188 files in other folders)
