[package]
name = "rustuml-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
proptest = "1"
rustuml-parser = { path = "../rustuml-parser" }
