[package]
name = "rustuml-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ab_glyph = "0.2"
rustuml-layout = { path = "../rustuml-layout" }
rustuml-math = { path = "../rustuml-math" }
rustuml-parser = { path = "../rustuml-parser" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
resvg = "0.47"
svg2pdf = "0.13"
